--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <html>
   <head>
     <title>InnKeeper Admin Panel</title>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script type="javascript">
+       var sock = new SockJS('http://localhost:8081');
+       sock.onopen = function() {
+           console.log('open');
+           sock.send('test');
+       };
+
+       sock.onmessage = function(e) {
+           console.log('message', e.data);
+           sock.close();
+       };
+
+       sock.onclose = function() {
+           console.log('close');
+       };
+    </script>
   </head>
   <body>
     Admin Panel pull from repo.
