--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>InnKeeper Admin Panel</title>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-    <script type="javascript">
+    <script type="text/javascript">
        var sock = new SockJS('http://localhost:8081');
        sock.onopen = function() {
            console.log('open');
