--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <form action="javascript: send()">
       <input type="text" id="message" />
-      <input type="topic" id="topic" />
+      <input type="button" id="topic" />
     
     </form>
     Admin Panel pull from repo.
