--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <form action="javascript: send()">
       <input type="text" id="message" />
       <input type="text" id="topic" value="/api/test" />
-    
+      <input type="submit">
     </form>
     Admin Panel pull from repo.
   </body>
