--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>InnKeeper Admin Panel</title>
   </head>
   <body>
-    Admin Panel pull from repo.
+    Admin Panel pull from repo. <br/> adding websocket testing
   </body>
 </html>
