--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
 <html>
   <head>
     <title>InnKeeper Admin Panel</title>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script type="text/javascript">
+      const client = new StompJs.Client({
+  brokerURL: 'ws://localhost:8081/ws',
+  debug: function (str) {
+    console.log(str);
+  },
+  reconnectDelay: 5000,
+  heartbeatIncoming: 4000,
+  heartbeatOutgoing: 4000,
+});
+
+// Fallback code
+if (typeof WebSocket !== 'function') {
+  // For SockJS you need to set a factory that creates a new SockJS instance
+  // to be used for each (re)connect
+  client.webSocketFactory = function () {
+    // Note that the URL is different from the WebSocket URL
+    return new SockJS('http://localhost:8081/ws');
+  };
+}
+
+client.onConnect = function (frame) {
+  // Do something, all subscribes must be done is this callback
+  // This is needed because this will be executed after a (re)connect
+};
+
+client.onStompError = function (frame) {
+  // Will be invoked in case of error encountered at Broker
+  // Bad login/passcode typically will cause an error
+  // Complaint brokers will set `message` header with a brief message. Body may contain details.
+  // Compliant brokers will terminate the connection after any error
+  console.log('Broker reported error: ' + frame.headers['message']);
+  console.log('Additional details: ' + frame.body);
+};
+
+client.activate();
+    </script>
   </head>
   <body>
-    Admin Panel pull from repo. <br/> adding websocket testing
+    Admin Panel pull from repo.
   </body>
 </html>
