--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script  type="module">
   import { Client } from '@stomp/stompjs';
       const client = new Client({
-  brokerURL: 'ws://localhost:8081/ws',
+  brokerURL: 'http://localhost:8081/ws',
   debug: function (str) {
     console.log(str);
   },
