--- a/index.html
+++ b/index.html
@@ -16,46 +16,43 @@
   crossorigin="anonymous"
 ></script>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-    <script  type="module">
-  import { Client } from '@stomp/stompjs';
-      const client = new Client({
-  brokerURL: 'http://localhost:8081/ws',
-  debug: function (str) {
-    console.log(str);
-  },
-  reconnectDelay: 5000,
-  heartbeatIncoming: 4000,
-  heartbeatOutgoing: 4000,
-});
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script> 
+    <script  type="text/javascript">
+      var stompClient;
+      function connect() {
+          var socket = new SockJS('/ws');
+          stompClient = Stomp.over(socket);
+          stompClient.connect({}, function (frame) {
+              setConnected(true);
+              console.log('Connected: ' + frame);
+              stompClient.subscribe('/client/response', function (greeting) {
+                  showGreeting(JSON.parse(greeting.body).content);
+              });
+          });
+      }
 
-// Fallback code
-if (typeof WebSocket !== 'function') {
-  // For SockJS you need to set a factory that creates a new SockJS instance
-  // to be used for each (re)connect
-  client.webSocketFactory = function () {
-    // Note that the URL is different from the WebSocket URL
-    return new SockJS('http://localhost:8081/ws');
-  };
-}
+      function disconnect() {
+          if (stompClient !== null) {
+              stompClient.disconnect();
+          }
+          setConnected(false);
+          console.log("Disconnected");
+      }
 
-client.onConnect = function (frame) {
-  // Do something, all subscribes must be done is this callback
-  // This is needed because this will be executed after a (re)connect
-};
+      function showGreeting(message) {
+          $("#greetings").append("<tr><td>" + message + "</td></tr>");
+      }
 
-client.onStompError = function (frame) {
-  // Will be invoked in case of error encountered at Broker
-  // Bad login/passcode typically will cause an error
-  // Complaint brokers will set `message` header with a brief message. Body may contain details.
-  // Compliant brokers will terminate the connection after any error
-  console.log('Broker reported error: ' + frame.headers['message']);
-  console.log('Additional details: ' + frame.body);
-};
-
-client.activate();
+      function sendName() {
+       stompClient.send("/app/hello", {}, JSON.stringify({
+        'name' : ""
+       }));
+      }
     </script>
   </head>
   <body>
     Admin Panel pull from repo.
+    <br/>
+    <input type="button" onclick="connect();" value="connect"/>
   </body>
 </html>
