--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               setConnected(true);
               console.log('Connected: ' + frame);
               stompClient.subscribe('/client/command', function (greeting) {
-                  showGreeting(JSON.parse(greeting.body).content);
+                  alert(JSON.parse(greeting.body).content);
               });
           });
       }
@@ -37,10 +37,6 @@
           }
           setConnected(false);
           console.log("Disconnected");
-      }
-
-      function showGreeting(message) {
-          $("#greetings").append("<tr><td>" + message + "</td></tr>");
       }
 
       function sendName() {
