--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
   src="https://ga.jspm.io/npm:es-module-shims@1.5.1/dist/es-module-shims.js"
   crossorigin="anonymous"
 ></script>
-    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script> 
     <script  type="text/javascript">
       var stompClient;
       function connect() {
-          var socket = new SockJS('/ws');
-          stompClient = Stomp.over(socket);
+          stompClient = Stomp.client("ws://localhost:8081/ws");
           stompClient.connect({}, function (frame) {
               setConnected(true);
               console.log('Connected: ' + frame);
