--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
 
       function sendName() {
-       stompClient.send("/app/hello", {}, JSON.stringify({
+       stompClient.send("/api/command", {}, JSON.stringify({
         'name' : ""
        }));
       }
