--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           console.log("Disconnected");
       }
 
-      function sendName() {
+      function send() {
        stompClient.send("/api/command", {}, JSON.stringify({
         'name' : ""
        }));
@@ -33,5 +33,7 @@
     Admin Panel pull from repo.
     <br/>
     <input type="button" onclick="connect();" value="connect"/>
+    <br/>
+    <input type="button" onclick="send();" value="send"/>
   </body>
 </html>
