--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 .then(response => response.text()) // This converts the response body to a string
                 .then(data => {
                   // Use the string data here
-                  stompClient.send("/api/command", {}, data);
+                  stompClient.send("/api/connect", {}, data);
                 });
           });
       }
