--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
       function send() {
        stompClient.send("/api/command", {}, JSON.stringify({
-        'uri' : "/pods/"
+        'uri': "/pods/",
+        'type': "get",
        }));
       }
     </script>
