--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 .then(data => {
                   // Use the string data here
                   stompClient.send("/api/connect", {}, JSON.stringify(data));
-                  stompClient.subscribe('/user/'+data[1]+'/client/command', function (greeting) {
+                  stompClient.subscribe('/client/command', function (greeting) {
                       alert(JSON.parse(greeting.body));
                   });
                 });
