--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 .then(data => {
                   // Use the string data here
                   stompClient.send("/api/connect", {}, JSON.stringify(data));
-                  stompClient.subscribe('/client/command', function (greeting) {
+                  stompClient.subscribe('/user/client/command', function (greeting) {
                       console.log(JSON.parse(greeting.body));
                   });
                 });
