--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
                 .then(data => {
                   // Use the string data here
                   stompClient.send("/api/connect", {}, JSON.stringify(data));
-                  
                 });
-            stompClient.subscribe('/user/client/command', function (greeting) {
-              console.log(JSON.parse(greeting.body));
-            });
+              stompClient.subscribe('/user/client/command', function (greeting) {
+                console.log(JSON.parse(greeting.body));
+              });
           });
           
       }
@@ -32,7 +31,8 @@
 
       function send() {
        stompClient.send("/api/command", {}, JSON.stringify({
-        'uri': "/pod/",
+        'uri': document.getElementById("uri").val,
+        'body': document.getElementById("body").val
         'type': "get",
        }));
       }
@@ -42,7 +42,9 @@
     Admin Panel pull from repo.
     <br/>
     <input type="button" onclick="connect();" value="connect"/>
-    <br/>
+    <br/><br/>
+    <input type="text" id="uri" value="/pod/"><br/>
+    <textarea id="body"></textarea><br/>
     <input type="button" onclick="send();" value="send"/>
   </body>
 </html>
