--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
   <head>
     <title>InnKeeper Admin Panel</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@5/index.js"></script>
     <script  type="text/javascript">
       var stompClient;
       function connect() {
-          stompClient = Stomp.client("ws://localhost:8081/stomp");
+          var socket = new SockJS('/stomp');
+          stompClient = Stomp.over(socket);
           stompClient.connect({}, function (frame) {
               console.log('Connected: ' + frame);
               fetch('/ws/token')
