--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>InnKeeper Admin Panel</title>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/stompjs@5/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script  type="text/javascript">
       var stompClient;
       function connect() {
