--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   // Use the string data here
                   stompClient.send("/api/connect", {}, JSON.stringify(data));
                 });
-              stompClient.subscribe('/user/client/command', function (greeting) {
+              stompClient.subscribe('/client/command', function (greeting) {
                 document.getElementById("response").value=JSON.stringify(JSON.parse(greeting.body), null, 2);
               });
           });
