--- a/session.html
+++ b/session.html
@@ -5,6 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script  type="text/javascript">
       var stompClient;
+      var id;
       function connect() {
           var socket = new SockJS('/stomp');
           stompClient = Stomp.over(socket);
@@ -21,7 +22,8 @@
                 document.getElementById("response").value=greeting.body;
               });
               stompClient.subscribe('/user/client/command/session/create', function (greeting) {
-                document.getElementById("response").value=greeting.body;
+                document.getElementById("body").value=`["${greeting.body}", "ls"]`;
+                
               });
               stompClient.subscribe('/user/client/connected', function (greeting) {
                 stompClient.send("/api/command/session/create", {}, JSON.stringify(["innkeeper","example-site-6875f5bbf5-n67s5"]));
