--- a/session.html
+++ b/session.html
@@ -18,14 +18,15 @@
                   stompClient.send("/api/connect", {}, JSON.stringify(data));
                 });
               
-              stompClient.subscribe('/user/client/command/session/send', function (greeting) {
-                document.getElementById("response").value=greeting.body;
+              stompClient.subscribe('/user/client/command/session/send', function (msg) {
+                console.log(msg);
+                document.getElementById("response").value=msg.body;
               });
-              stompClient.subscribe('/user/client/command/session/create', function (greeting) {
-                document.getElementById("body").value=`["${greeting.body}", "ls"]`;
+              stompClient.subscribe('/user/client/command/session/create', function (msg) {
+                document.getElementById("body").value=`["${msg.body}", "ls"]`;
                 
               });
-              stompClient.subscribe('/user/client/connected', function (greeting) {
+              stompClient.subscribe('/user/client/connected', function (msg) {
                 stompClient.send("/api/command/session/create", {}, JSON.stringify(["innkeeper","example-site-6875f5bbf5-n67s5"]));
               });
           });
