--- a/session.html
+++ b/session.html
@@ -24,6 +24,9 @@
               });
               stompClient.subscribe('/user/client/command/session/create', function (msg) {
                 document.getElementById("body").value=`["${msg.body}", "ls"]`;
+                stompClient.subscribe('/client/command/session/send/'+msg.body, function (msg) {
+                  document.getElementById("response").value=document.getElementById("response").value+msg.body;
+                });
                 
               });
               stompClient.subscribe('/user/client/connected', function (msg) {
