--- a/session.html
+++ b/session.html
@@ -24,6 +24,7 @@
               });
               stompClient.subscribe('/user/client/command/session/create', function (msg) {
                 document.getElementById("body").value=`["${msg.body}", "ls"]`;
+                document.getElementById("codeBody").value=`{"uuid":"${msg.body}","aChar":""}`;
                 stompClient.subscribe('/client/command/session/send/'+msg.body, function (msg) {
                   document.getElementById("response").value=document.getElementById("response").value+msg.body;
                 });
@@ -56,7 +57,7 @@
     Admin Panel pull from repo.
     <br/>
     <input type="button" onclick="connect();" value="connect"/>
-    <br/>
+    <br/><br/><br/>
     <form action="javascript: sendCode();">
       <input type="text" id="codeBody" style="width:600px;"><br/>
       <input type="submit" value="sendCode"/>
