--- a/session.html
+++ b/session.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>InnKeeper Admin Panel</title>
-    <script src="https://raw.githubusercontent.com/drudru/ansi_up/master/ansi_up.js" type="text/javascript"></script>
+    <script src="/ui/ansi_up.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script  type="text/javascript">
