--- a/session.html
+++ b/session.html
@@ -7,7 +7,8 @@
     <script  type="text/javascript">
       var stompClient;
       var id;
-   
+  
+      var console = ""; 
       function connect() {
           var socket = new SockJS('/stomp');
           stompClient = Stomp.over(socket);
@@ -26,9 +27,11 @@
               stompClient.subscribe('/user/client/command/session/create', function (msg) {
                 document.getElementById("body").value=`ls`;
                 id = msg.body;
+                console = "";
                 stompClient.subscribe('/client/command/session/send/'+msg.body, function (msg) {
                   var ansi_up = new AnsiUp();
-                  document.getElementById("response").innerHTML=document.getElementById("response").innerHTML+ansi_up.ansi_to_html(msg.body);
+                  console+=msg.body;
+                  document.getElementById("response").innerHTML=ansi_up.ansi_to_html(console);
                 });
                 
               });
