--- a/session.html
+++ b/session.html
@@ -7,7 +7,6 @@
     <script  type="text/javascript">
       var stompClient;
       var id;
-  
       var consoleLog = ""; 
       function connect() {
           var socket = new SockJS('/stomp');
@@ -27,7 +26,7 @@
               stompClient.subscribe('/user/client/command/session/create', function (msg) {
                 document.getElementById("body").value=`ls`;
                 id = msg.body;
-                console = "";
+                consoleLog = "";
                 stompClient.subscribe('/client/command/session/send/'+msg.body, function (msg) {
                   var ansi_up = new AnsiUp();
                   consoleLog+=msg.body;
