--- a/session.html
+++ b/session.html
@@ -1,14 +1,16 @@
 <html>
   <head>
     <title>InnKeeper Admin Panel</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ansi-to-html/0.7.2/ansi_to_html.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="xterm.css" />
+    <script src="xterm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script  type="text/javascript">
       var stompClient;
-      var id;
-      var consoleLog = ""; 
+      var id; 
       function connect() {
+          var term = new Terminal();
+          term.open(document.getElementById('response'));
           var socket = new SockJS('/stomp');
           stompClient = Stomp.over(socket);
           stompClient.connect({}, function (frame) {
@@ -26,11 +28,8 @@
               stompClient.subscribe('/user/client/command/session/create', function (msg) {
                 document.getElementById("body").value=`ls`;
                 id = msg.body;
-                consoleLog = "";
                 stompClient.subscribe('/client/command/session/send/'+msg.body, function (msg) {
-                  var convert = new Convert();
-                  consoleLog+=msg.body;
-                  document.getElementById("response").innerHTML=convert.toHtml(consoleLog);
+                  term.write(msg.body)
                 });
                 
               });
