--- a/session.html
+++ b/session.html
@@ -29,10 +29,10 @@
                 id = msg.body;
                 term = new Terminal();
                 term.open(document.getElementById('response'));
+                resize();
                 stompClient.subscribe('/client/command/session/send/'+msg.body, function (msg) {
                   term.write(msg.body)
                 });
-                
               });
               stompClient.subscribe('/user/client/connected', function (msg) {
                 stompClient.send("/api/command/session/create", {}, JSON.stringify(["innkeeper","example-site-6875f5bbf5-stptl"]));
@@ -56,7 +56,7 @@
        stompClient.send("/api/command/session/send_code", {}, JSON.stringify({uuid:id, aChar:"\u0003"}));
       }
       function resize(){
-        console.log('Rows: ' + term.rows + ', Columns: ' + term.cols);
+        stompClient.send("/api/command/session/resize", {}, JSON.stringify({uuid:id, rows:term.rows, cols: term.cols}));
       }
     </script>
     
