--- a/session.html
+++ b/session.html
@@ -56,7 +56,10 @@
        stompClient.send("/api/command/session/send_code", {}, JSON.stringify({uuid:id, aChar:"\u0003"}));
       }
       function resize(){
+        term.resize(document.getElementById('cols').value, document.getElementById('rows').value)
         stompClient.send("/api/command/session/resize", {}, JSON.stringify({uuid:id, rows:term.rows, cols: term.cols}));
+        document.getElementById('rows').value=term.rows;
+        document.getElementById('cols').value=term.cols;
       }
     </script>
     
@@ -65,10 +68,10 @@
     Admin Panel pull from repo.
     <br/>
     <input type="button" onclick="connect();" value="connect"/>
-    <br/><br/><br/>
+    <br/><input type="text" id="cols"  /> <input type="text" id="rows" /><br/><br/><br/>
     <input type="button" onClick="sendCTRLC();" value="CTRLC"/> <input type="button" onClick="resize();" value="Resize"/>
     <br/><br/><br/>
-    <div id="response" style="height:700px;width:900px;"></div>
+    <div id="response" style="height:700px;width:1000px;"></div>
     <br/>
     <form action="javascript: send();">
       <input type="text" id="body" style="width:600px;"><br/>
