--- a/session.html
+++ b/session.html
@@ -72,7 +72,7 @@
     <br/><input type="text" value="150" id="cols"  /> <input type="text" id="rows" value=25 /><br/><br/><br/>
     <input type="button" onClick="sendCTRLC();" value="CTRLC"/> <input type="button" onClick="resize();" value="Resize"/>
     <br/><br/><br/>
-    <textarea id="response" style="height:700px;width:1600px;"></textarea>
+    <div id="response" style="height:700px;width:1600px;"></div>
     <br/>
     <form action="javascript: send();">
       <input type="text" id="body" style="width:600px;"><br/>
