--- a/session.html
+++ b/session.html
@@ -3,6 +3,7 @@
     <title>InnKeeper Admin Panel</title>
     <link rel="stylesheet" href="xterm.css" />
     <script src="xterm.js"></script>
+    <script src="xterm-addon-webgl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script  type="text/javascript">
@@ -28,6 +29,7 @@
                 document.getElementById("body").value="";
                 id = msg.body;
                 term = new Terminal();
+                term.loadAddon(new WebglAddon());
                 term.open(document.getElementById('response'));
                 resize();
                 stompClient.subscribe('/client/command/session/send/'+msg.body, function (msg) {
