--- a/session.html
+++ b/session.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>InnKeeper Admin Panel</title>
-    <link rel="stylesheet" href="xterm.css" />
-    <script src="xterm.js"></script>
-    <script src="xterm-addon-webgl.js"></script>
+    <link rel="stylesheet" href="/ui/xterm.css" />
+    <script src="/ui/xterm.js"></script>
+    <script src="/ui/xterm-addon-webgl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script  type="text/javascript">
