--- a/session.html
+++ b/session.html
@@ -28,7 +28,10 @@
               stompClient.subscribe('/user/client/command/session/create', function (msg) {
                 document.getElementById("body").value="";
                 id = msg.body;
-                term = new Terminal();
+                term = new Terminal({
+                  cursorBlink: true,
+                  allowProposedApi: true
+                });
                 term.loadAddon(new window.WebglAddon.WebglAddon());
                 term.open(document.getElementById('response'));
                 resize();
