--- a/session.html
+++ b/session.html
@@ -36,7 +36,7 @@
                 term.open(document.getElementById('response'));
                 resize();
                 stompClient.subscribe('/client/command/session/send/'+msg.body, function (msg) {
-                  term.write(msg.body);
+                  term.writeln(msg.body);
                 });
               });
               stompClient.subscribe('/user/client/connected', function (msg) {
