--- a/session.html
+++ b/session.html
@@ -58,6 +58,7 @@
                     default: // Print all other characters for demo
                       if (e >= String.fromCharCode(0x20) && e <= String.fromCharCode(0x7E) || e >= '\u00a0') {
                         command += e;
+                        console.log(e);
                         term.write(e);
                       }
                   }
