--- a/session.html
+++ b/session.html
@@ -34,6 +34,7 @@
                   disableStdin: false
                 });
                 term.onData(e => {
+                  console.log(e);
                   switch (e) {
                     case '\u0003': // Ctrl+C
                       sendCode('\u0003');
