--- a/session.html
+++ b/session.html
@@ -37,7 +37,7 @@
                   console.log("F1" + e.charCodeAt(0).toString(16));
                   switch (e) {
                     case '\u0003': // Ctrl+C
-                    case '\uF11b'
+                    case '\uF11b':
                       sendCode(e);
                       break;
                     case '\r': // Enter
