--- a/session.html
+++ b/session.html
@@ -40,10 +40,9 @@
                   console.log(e);
                 });
                 term.onData(e => {
-                  console.log("F1" + e.toString(16));
                   switch (e) {
                     case '\u0003': // Ctrl+C
-                    case '\uF11b':
+                    case '\x1B[A':
                       sendCode(e);
                       break;
                     case '\r': // Enter
