--- a/session.html
+++ b/session.html
@@ -43,6 +43,9 @@
                   switch (e) {
                     case '\u0003': // Ctrl+C
                     case '\x1B[A':
+                    case '\x1B[B':
+                    case '\x1B[C':
+                    case '\x1B[D':
                       sendCode(e);
                       break;
                     case '\r': // Enter
